--- a/DesignerRHN/DesignerRHN-war/web/departamento.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/departamento.xhtml
@@ -116,10 +116,18 @@
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlDepartamentos.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="" for="rastro" value="Rastro"/>
 
+                                <p:separator style="position: relative; top: -9px"/>
+
+                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlDepartamentos.cancelarModificacion()}" process="@this"/>  
+                                <p:tooltip  for="refrescar" value="refrescar"/>
+
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlDepartamentos.salir()}"  process="@this"/>  
+                                <p:tooltip  for="salir" value="Salir"/>
+
                             </p:toolbarGroup>  
                         </p:toolbar>
 
-                        <p:commandButton style=" position: absolute; left: 15px; top: 470px; " icon="ui-icon-refresh" id="REFRESCAR" actionListener="#{controlDepartamentos.cancelarModificacion()}"  value="Refrescar" process="@this" />
+                        <h:outputText id="informacionRegistro" value="#{controlDepartamentos.infoRegistro}" style="position: absolute; left: 15px; top: 475px; font-weight: bold"/>
                         <p:commandButton style=" position: absolute; left: 688px; top: 470px; " icon="ui-icon-check" id="ACEPTAR" value="Aceptar"  actionListener="#{controlDepartamentos.revisarDialogoGuardar()}" disabled="#{controlDepartamentos.guardado}"    process="@this"   />
                         <p:commandButton style=" position: absolute; left: 785px; top: 470px; " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"    />
 
@@ -132,8 +140,8 @@
                                 <p:ajax event="rowSelect" listener="#{controlDepartamentos.activarAceptar()}" update=":form:aceptarS"/>
                                 <p:ajax event="rowDblselect" listener="#{controlDepartamentos.actualizarPais()}" process="@this" onstart="lovTiposFamiliares.clearFilters()"/>
                                 <f:facet name="header">  
-                                    <h:outputText value="Buscar Pais"  style="position: absolute; left: 27px; top: 14px"/>  
-                                    <p:inputText id="globalFilter" onkeyup="lovTiposFamiliares.filter();" style="width:150px; position: relative; left: 50px;" />  
+                                    <h:outputText value="Buscar Pais :"  style="position: absolute; left: 27px; top: 14px"/>  
+                                    <p:inputText id="globalFilter" onkeyup="lovTiposFamiliares.filter();" style="width:180px; position: relative; left: 40px;" />  
                                 </f:facet>
                                 <p:column filterBy="#{tipofamiliar.codigo}" width="50" filterStyle="width:30px;" filterMatchMode="contains">
                                     <f:facet name="header">
@@ -149,7 +157,8 @@
                                 </p:column>
 
                             </p:dataTable>
-                            <p:commandButton id="aceptarS"  icon="ui-icon-check" style="position: relative; left: 240px" value="Aceptar"  onclick="sucursalesDialogo.hide(), lovTiposFamiliares.clearFilters();"  actionListener="#{controlDepartamentos.actualizarPais()}" update="lovTiposFamiliares, aceptarS" process="@this">
+                            <h:outputText id="infoRegistroPaises" value="#{controlDepartamentos.infoRegistroPaises}" style="position: absolute; left: 15px; top: 385px; font-weight: bold"/>
+                            <p:commandButton id="aceptarS"  icon="ui-icon-check" style="position: relative; left: 240px" value="Aceptar"  onclick="sucursalesDialogo.hide(), lovTiposFamiliares.clearFilters();" disabled="#{controlDepartamentos.aceptar}" actionListener="#{controlDepartamentos.actualizarPais()}" update="lovTiposFamiliares, aceptarS" process="@this">
                                 <p:resetInput target=":form:lovTiposFamiliares:globalFilter"/>
                             </p:commandButton>
                             <p:commandButton id="atrasS"  icon="ui-icon-arrowreturnthick-1-w" style="position: relative; left: 240px" value="Atras"  actionListener="#{controlDepartamentos.cancelarCambioPais()}" onclick="sucursalesDialogo.hide();
@@ -261,7 +270,7 @@
                     <p:dialog id="editDescripcion" header="Descripción" widgetVar="editDescripcion" resizable="false" draggable="false" modal="true" height="55" width="240" style="text-transform: uppercase">  
                         <p:inputTextarea value="#{controlDepartamentos.editarDepartamentos.nombre}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                     </p:dialog>
-                    <p:dialog id="editPais" header="Editar Pais" widgetVar="editPais" resizable="false" draggable="false" modal="true" height="55" width="240" style="text-transform: uppercase">  
+                    <p:dialog id="editPais" header="Pais" widgetVar="editPais" resizable="false" draggable="false" modal="true" height="55" width="240" style="text-transform: uppercase">  
                         <p:inputTextarea value="#{controlDepartamentos.editarDepartamentos.pais.nombre}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                     </p:dialog>
 
@@ -273,7 +282,7 @@
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
                             <strong><h:outputText value="*Código: "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlDepartamentos.nuevoDepartamentos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;">
+                            <p:inputText id="nuevoCodigo" value="#{controlDepartamentos.nuevoDepartamentos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
@@ -306,18 +315,18 @@
 
                         <p:panel id="duplicarTE" style="border: none;">
                             <strong><h:outputText value="código "  style=" position: absolute; top: 60px;" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlDepartamentos.duplicarDepartamentos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;">
+                            <p:inputText id="duplicarCodigo" value="#{controlDepartamentos.duplicarDepartamentos.codigo}" style=" width: 135px; position: absolute; left: 135px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
                             <strong><h:outputText value="Descripcion"  style=" position: absolute; top: 90px;" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlDepartamentos.duplicarDepartamentos.nombre}"  style=" width: 135px; position: absolute; left: 135px; top: 85px;" >
+                            <p:inputText id="duplicarNombre" value="#{controlDepartamentos.duplicarDepartamentos.nombre}"  style=" width: 135px; position: absolute; left: 135px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripcion" />
                             <strong><h:outputText value="Descripcion"  style=" position: absolute; top: 120px;" /></strong>
-                            <p:inputText id="duplicarPais" value="#{controlDepartamentos.duplicarDepartamentos.pais.nombre}"  style=" width: 135px; position: absolute; left: 135px; top: 115px;" >
+                            <p:inputText id="duplicarPais" value="#{controlDepartamentos.duplicarDepartamentos.pais.nombre}"  style=" width: 135px; position: absolute; left: 135px; top: 115px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlDepartamentos.valoresBackupAutocompletar(2)}" />
                                 <p:ajax event="change" listener="#{controlDepartamentos.autocompletarDuplicado('PAISES', controlDepartamentos.duplicarDepartamentos.pais.nombre , 2)}" />
                                 <p:ajax event="dblclick" listener="#{controlDepartamentos.asignarVariablePaises(1)}" />
