--- a/DesignerRHN/DesignerRHN-war/web/emplibcs.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplibcs.xhtml
@@ -16,7 +16,7 @@
                         <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: #BF1A1A; font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlEmplIbcs.empleadoSeleccionado.persona.nombreCompleto}"/>
 
                         <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 14px; color: blue"><strong>Consulta de los IBCSs</strong></legend>
+                            <legend style="font-size: 14px; color: blue"><strong>Consulta de los IBCS</strong></legend>
 
 
                             <p:dataTable id="datosIbcs" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 830px ; border: 1px;"                           
@@ -42,9 +42,7 @@
                                             </p:inputText>
                                         </f:facet>
                                     </p:cellEditor>
-                                    <f:facet name="footer">
-                                        <h:outputText value="Fecha Inicial" />
-                                    </f:facet>
+
                                 </p:column>  
 
                                 <p:column id="fechaFinal" headerText="Fecha Final" sortBy="#{info.fechafinal}" filterBy="#{info.fechafinal}" filterMatchMode="contains"  width="220"  filterStyle="display: none; visibility: hidden;" >
@@ -62,9 +60,7 @@
                                             </p:inputText>
                                         </f:facet>
                                     </p:cellEditor>
-                                    <f:facet name="footer">
-                                        <h:outputText value="Fecha Final" />
-                                    </f:facet>
+
                                 </p:column>  
 
                                 <p:column headerText="Valor" sortBy="#{info.valor}" filterBy="#{info.valor}" filterMatchMode="contains" id="valor" width="230" filterStyle="display: none; visibility: hidden;" >                                  
@@ -73,7 +69,8 @@
                                             <h:outputText value="#{info.valor}">
                                                 <f:convertNumber currencySymbol="$" type="currency" />
                                             </h:outputText>
-                                        </f:facet>                                         <f:facet name="input">
+                                        </f:facet>
+                                        <f:facet name="input">
                                             <p:inputText  value="#{info.valor}" id="editarUnidades" style="  border-radius: 0px; width: 300px; text-transform: uppercase; height: 12px"  > 
                                                 <p:ajax event="select" listener="#{controlEmplIbcs.cambiarIndice(indice, 2)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlEmplIbcs.revisarCambios()}"  update="editarUnidades"/>
@@ -82,9 +79,6 @@
                                         </f:facet>  
                                     </p:cellEditor>
 
-                                    <f:facet name="footer">
-                                        <h:outputText value="Valor"/>
-                                    </f:facet>
                                 </p:column>  
 
                             </p:dataTable>
@@ -140,7 +134,6 @@
                         </p:toolbar>
 
                         <h:outputText id="informacionRegistro" value="#{controlEmplIbcs.infoRegistro}" style="position: absolute; left: 15px; top: 485px; font-weight: bold"/>
-
                         <p:commandButton style=" position: absolute; left: 15px; top: 450px;  " icon="ui-icon-triangle-1-e" action="ibcAuto" actionListener="#{controlIbcAutoliquid.obtenerTipoEntidad(controlEmplIbcs.empleadoSeleccionado.secuencia)}" id="detallesIbcs" value="Detalles IBCS" process="@this" />
                         <p:commandButton style=" position: absolute; left: 785px; top: 470px;  " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" action="atrasEmplIbcs"   />
                     </p:panel>
